refactor(jmh): add native serialization benchmarks